--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next-themes": "^0.3.0",
     "query-string": "^8.1.0",
     "react": "^18",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "^18",
     "sonner": "^1.4.3",
     "tailwind-merge": "^2.2.2",
